# yuchengCV2020

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  main2.cpp
include/: denoise_RANSAC.hpp  descriptor_BRIEF.hpp  feature_EAS.hpp  feature_GoodFeature.hpp  feature_SIFT.hpp  feature_SURF.hpp  track_KLT.hpp
include/xcv/: calib3d_precomp.hpp  vedio_precomp.hpp  xfeatures2d_precomp.hpp  xhal_replacement.hpp  xocl_defs.hpp  xopencl_kernels_imgproc.hpp  xopencl_kernels_video.hpp  xopencl_kernels_xfeatures2d.hpp  xovx_defs.hpp  xprecomp.hpp  xprivate.cuda.hpp  xprivate.hpp
src/: denoise_RANSAC.cpp  descriptor_BRIEF.cpp  feature_EAS.cpp  feature_GoodFeature.cpp  feature_SIFT.cpp  feature_SURF.cpp  feature_SURF.ocl.cpp  track_KLT.cpp
src/xcv/: xopencl_kernels_imgproc.cpp  xopencl_kernels_video.cpp  xopencl_kernels_xfeatures2d.cpp  xptsetreg.cpp  xrho.cpp
